# CoALP

./: CoALP.cabal  README.md
benchmarks/: Automata.hs  Fibs.hs
interpreter/: CoALPi.hs
interpreter/CoALP/Interpreter/: Options.hs
lib/: CoALP.hs
lib/CoALP/: CTree.hs  Clause.hs  ClauseTree.hs  CoInTree.hs  Derivation.hs  Guards.hs  Guards2.hs  Mode.hs  OldProcess.hs  Process.hs  Resolution.hs  Subst.hs  Substitution.hs  Term.hs  TermTree.hs  Tree.hs  TreeLang.hs  UI.hs
lib/CoALP/UI/: Dot.hs  Parser.hs  Printer.hs
programs/: btree.logic  btree_ground3500.logic  fib.logic  naive_sort.logic  question28.logic  question30.logic
programs/guarded/: append.logic  automaton.logic  coinductivep.logic  consume-rename-2.logic  consume-rename.logic  family.logic  from.logic  generate_infinite_list.logic  guarded1.logic  guarded10.logic  guarded11.logic  guarded2.logic  guarded3.logic  guarded4.logic  guarded5.logic  guarded6.logic  guarded9.logic  infinite012.logic  infiniteautomata.logic  listnat.logic  member1.logic  member2.logic  nats.logic  nqueens.logic  parsetest.logic  path.logic  stream.logic  streamnat.logic
programs/typeinference/: tom.logic  typeinf.logic  typeinf2.logic
programs/typeinference/CoALPi-20140508-211920/: 0-0.gv
programs/typeinference/CoALPi-20140508-212051/: 0-0.gv
programs/unguarded/Check1/: comember.logic  unguarded1.logic  unguarded23.logic  unguarded3.logic  unguarded5.logic
programs/unguarded/Check2/: unguarded16.logic  unguarded2.logic  unguarded24.logic  unguarded26.logic  unguarded4.logic  unguarded7.logic
programs/unguarded/Check3/: ex-P9.logic  question29.logic  unguarded10.logic  unguarded11.logic  unguarded12.logic  unguarded13.logic  unguarded14.logic  unguarded15.logic  unguarded17.logic  unguarded18.logic  unguarded19.logic  unguarded20.logic  unguarded21.logic  unguarded22.logic  unguarded24.logic  unguarded25.logic  unguarded27.logic  unguarded29.logic  unguarded30.logic  unguarded6.logic  unguarded8.logic  unguarded9.logic
tests/: Tests.hs
tests/CoALP/Tests/Unit/: Guards.hs  Subst.hs
